--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -42,6 +42,12 @@ jobs:
         with:
           path: ./public
 
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
   deploy:
     environment:
       name: github-pages
